// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LineChart > renders correctly when data is async 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.emotion-0 {
  margin-top: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-73 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #0083e6;
}

.emotion-73 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #0083e6;
}

.emotion-107 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #3ebd8f;
}

.emotion-107 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #3ebd8f;
}

<div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3 emotion-4"
        >
          Legend
        </div>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Minimum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Maximum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Average
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Current
        </span>
      </div>
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="emotion-23 emotion-24"
                id=":r1u:"
                name="lineChartMultiple1"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r1u:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        Serie 1
                      </span>
                      <div
                        class="emotion-39"
                        data-testid="label-lineChartMultiple1"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -9
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            55
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            9.27
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0
          </span>
        </div>
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="emotion-23 emotion-24"
                id=":r25:"
                name="lineChartMultiple2"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r25:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        Serie 2
                      </span>
                      <div
                        class="emotion-73"
                        data-testid="label-lineChartMultiple2"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -14
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            76
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7.73
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0
          </span>
        </div>
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="emotion-23 emotion-24"
                id=":r2c:"
                name="lineChartMultiple3"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r2c:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        Serie 3
                      </span>
                      <div
                        class="emotion-107"
                        data-testid="label-lineChartMultiple3"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -38
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            93
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            21.53
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            34
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly when legend is deselected 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.emotion-0 {
  margin-top: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3 emotion-4"
        >
          Legend
        </div>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Minimum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Maximum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Average
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Current
        </span>
      </div>
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                checked=""
                class="emotion-23 emotion-24"
                id=":r1j:"
                name="lineChartSerie"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r1j:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        line chart values
                      </span>
                      <div
                        class="emotion-39"
                        data-testid="label-lineChartSerie"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -7
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0.2
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly with data transformer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3 emotion-4"
        >
          Legend
        </div>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Minimum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Maximum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Average
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Current
        </span>
      </div>
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="emotion-23 emotion-24"
                id=":r4:"
                name="lineChartSerie"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r4:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        line chart values
                      </span>
                      <div
                        class="emotion-39"
                        data-testid="label-lineChartSerie"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -7
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0.2
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly with multiple series 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-73 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #0083e6;
}

.emotion-107 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #3ebd8f;
}

<div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3 emotion-4"
        >
          Legend
        </div>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Minimum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Maximum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Average
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Current
        </span>
      </div>
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="emotion-23 emotion-24"
                id=":rq:"
                name="lineChartMultiple1"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":rq:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        Serie 1
                      </span>
                      <div
                        class="emotion-39"
                        data-testid="label-lineChartMultiple1"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -9
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            55
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            9.27
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0
          </span>
        </div>
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="emotion-23 emotion-24"
                id=":r11:"
                name="lineChartMultiple2"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r11:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        Serie 2
                      </span>
                      <div
                        class="emotion-73"
                        data-testid="label-lineChartMultiple2"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -14
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            76
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7.73
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0
          </span>
        </div>
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="emotion-23 emotion-24"
                id=":r18:"
                name="lineChartMultiple3"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":r18:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        Serie 3
                      </span>
                      <div
                        class="emotion-107"
                        data-testid="label-lineChartMultiple3"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -38
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            93
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            21.53
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            34
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly with point formatter 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly with timeline data 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.emotion-2>:not(:last-child) {
  margin-right: 8px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.emotion-6 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-17>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.emotion-18>:not(:last-child) {
  margin-right: 8px;
}

.emotion-21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.emotion-21 .emotion-34 {
  cursor: pointer;
}

.emotion-21[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21[aria-disabled='true'] .emotion-34 {
  cursor: not-allowed;
}

.emotion-21[aria-disabled='true'] .emotion-26 {
  fill: #e9eaeb;
}

.emotion-21[aria-disabled='true'] .emotion-26 .emotion-28 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 {
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24:checked+.emotion-26 .emotion-28 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 {
  fill: #e5dbfd;
}

.emotion-21[aria-disabled='true'] .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-21 .emotion-24:checked+.emotion-26 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-21 .emotion-24:checked+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21 .emotion-24[aria-invalid="true"]:checked+.emotion-26 .emotion-28 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-21 .emotion-24[aria-checked="mixed"]+.emotion-26 .emotion-28 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='false'][aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='false']+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-21:hover[aria-disabled='false'] .emotion-24[aria-invalid='true'][aria-checked='true']+.emotion-26 .emotion-28 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 {
  fill: #e51963;
}

.emotion-21 .emotion-24[aria-invalid="true"]+.emotion-26 .emotion-28 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-23 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.emotion-23:not(:disabled) {
  cursor: pointer;
}

.emotion-23:disabled {
  cursor: not-allowed;
}

.emotion-23:not(:disabled):checked+.emotion-26,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 {
  fill: #8c40ef;
}

.emotion-23:not(:disabled):checked+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-checked='mixed']+.emotion-26 .emotion-28 {
  stroke: #8c40ef;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 {
  fill: #ffebf2;
}

.emotion-23:not(:disabled)[aria-invalid='true']+.emotion-26 .emotion-28,
.emotion-23:not(:disabled)[aria-invalid='mixed']+.emotion-26 .emotion-28 {
  stroke: #b3144d;
}

.emotion-23:focus+.emotion-26 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-23:focus+.emotion-26 .emotion-28 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[aria-invalid='true']:focus+.emotion-26 .emotion-28 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-25 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-25 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-27 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-33 {
  width: 100%;
  cursor: pointer;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-37 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39 {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.emotion-41 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3 emotion-4"
        >
          Legend
        </div>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Minimum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Maximum
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Average
        </span>
        <span
          class="emotion-5 emotion-6 emotion-7"
        >
          Current
        </span>
      </div>
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-3 emotion-4"
          >
            <div
              aria-disabled="false"
              class="emotion-21 emotion-22"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="emotion-23 emotion-24"
                id=":rf:"
                name="lineChartHours"
                type="checkbox"
                value=""
              />
              <svg
                class="emotion-25 emotion-26"
                fill="none"
                size="24"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-27 emotion-28"
                    height="16"
                    rx="2px"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-29 emotion-30"
              >
                <div
                  class="emotion-31 emotion-30"
                >
                  <label
                    class="emotion-33 emotion-34"
                    for=":rf:"
                  >
                    <div
                      class="emotion-35 emotion-36"
                    >
                      <span
                        class="emotion-37 emotion-7"
                      >
                        line chart hours values
                      </span>
                      <div
                        class="emotion-39"
                        data-testid="label-lineChartHours"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            -14
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            76
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            7.73
          </span>
          <span
            class="emotion-5 emotion-41 emotion-7"
          >
            0
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart > renders correctly without data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
